# tree-sitter-dialogue

./: .editorconfig  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  example-file  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-dialogue.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_dialogue/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterDialogue/: dialogue.h
bindings/swift/TreeSitterDialogueTests/: TreeSitterDialogueTests.swift
corpus/: statements.txt
src/: grammar.json  parser.c
